# Exa-Zellij

./: CMakeLists.txt  GPfunctions.cpp  GPfunctions.hpp  HPCfunctions.cpp  HPCfunctions.hpp  README.md  mainfractalehighd.cpp
FDA with Beam search/: internode.cpp  intranode.cpp
FDA with Beam search/Hard to evaluate objective function/: expensive_inter_node.cpp  expensive_intranode_multiple_gpus.cpp  intranode_one_gpu.cpp
FDA with Beam search/easy to evaluate objective function/: internode.cpp  intranode_with_multiple_gpus.cpp  intranode_with_one_gpu.cpp
